# configs

./: .gitignore  Anchor.toml  Makefile  README.md  generate-idls.sh  index.html  modules.html  package.json  tsconfig.json
.github/workflows/: deploy-dev.yml  deps.yml  publish-docs.yml  publish-js.yml  release.yml  test.yml
assets/: search.js
programs/cardinal-configs/: Cargo.toml
programs/cardinal-configs/src/: errors.rs  lib.rs  state.rs
programs/cardinal-configs/src/instructions/: init_config_entry.rs  mod.rs  update_config_entry.rs
programs/cardinal-onchain-storage/: Cargo.toml
programs/cardinal-onchain-storage/src/: errors.rs  lib.rs  state.rs
programs/cardinal-onchain-storage/src/instructions/: init_storage_entry.rs  mod.rs  update_storage_entry.rs
src/idl/: cardinal_configs.json  cardinal_configs.ts  cardinal_configs_idl.json  cardinal_onchain_storage.json  cardinal_onchain_storage.ts
src/programs/: accounts.ts  constants.ts  pda.ts
tests/: testConfigEntry.test.ts  testStrrageEntry.test.ts
tools/: createUpdateConfig.ts  getConfigEntry.ts  mapping.ts
