[package]
name = "cardinal-configs"
version = "1.0.0"
description = "Cardinal Configs"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-configs/"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal", "configs"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_configs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.10.41"
anchor-lang = { version = "0.25.0" }
cardinal-rewards-center = { version = "^2.3.0", features = ["no-entrypoint"] }
cardinal-stake-pool = { version = "^1.17.0", features = ["no-entrypoint"] }
serde_json = "1.0.91"