[package]
name = "cardinal-configs"
version = "1.0.0"
description = "Cardinal Configs"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-configs/"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal", "configs"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_configs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.10.41"
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
cardinal-rewards-center = { version = "^3.7.0", features = [
    "no-entrypoint",
], path = "../../../cardinal-rewards-center/programs/cardinal-rewards-center" }
serde_json = "1.0.91"
