[package]
name = "cardinal-onchain-storage"
version = "1.0.0"
description = "Cardinal Onchain Storage"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-onchain-storage/"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal", "onchain", "storage"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_onchain_storage"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.10.41"
anchor-lang = { version = "0.25.0" }
cardinal-rewards-center = { version = "^2.3.0" }
cardinal-stake-pool = { version = "^1.17.0" }